# HPS-CODE

./: .gitignore  CMakeLists.txt  README.md  ap_plots.py  apeff.py  applyCut.py  bumphunt_cuts.py  cuts.py  eventselection_plots.py  fee_angles.py  fittails_mc.py  fitvtx.py  fitvtx_mc.py  fitvtx_tuple.py  makeTrainingTrees.py  makeTree.py  mc_plots.py  mergeTrees.py  moller_angles.py  overlay.py  radfrac.py  run_fittails.sh  run_makecuts.sh  toystats.py  wabratio_thesisplots.py
ANALYSIS/: README.md
ANALYSIS/EvioTool/: CanvasPartition.C  Makefile  Makefile_depends  README.md  SpecsECal.hh  Todo  ecalwiring.csv  ecalwiring.csv-fromifarm  env.csh  src
ANALYSIS/EvioTool/EvioTool/: EvioEvent.cc  EvioEvent.h  EvioTool.cc  EvioTool.h  et.h
ANALYSIS/EvioTool/EvioTool_Test/: AnaEcal.cc  AnaEcal.hh  EvioTool_Test.cc  HPSNT.h
ANALYSIS/EvioTool/et-14.0/: .sconsign.dblite  lib
ANALYSIS/EvioTool/evio-4.3.1/: .sconsign.dblite  Build_Quick.sh
ANALYSIS/EvioTool/include/: evio.h  evioBankIndex.hxx  evioBufferChannel.hxx  evioChannel.hxx  evioDictionary.hxx  evioException.hxx  evioFileChannel.hxx  evioSocketChannel.hxx  evioTypedefs.hxx  evioUtil.hxx  evioUtilTemplates.hxx
ANALYSIS/EvioTool/macros/: Time_it.C  Time_it_C.d
ANALYSIS/SVT/: MakeClusterPlots.py  MakeOccupancyPlots.py  MakeVertexResPlots.py  VertexRes.py
ANALYSIS/bump-hunter/: CMakeLists.txt  README.md
ANALYSIS/bump-hunter/include/fit/: BumpHunter.h  HpsFitResult.h
ANALYSIS/bump-hunter/include/utils/: FitPrinter.h  RooPow.h  RootFileReader.h
ANALYSIS/bump-hunter/python/: generate_full_toys.py
ANALYSIS/bump-hunter/src/fit/: BumpHunter.cxx  CMakeLists.txt  bump_hunt_evaluator.cxx  bump_hunter.cxx  evaluator.cxx  set_upper_limits.cxx
ANALYSIS/bump-hunter/src/utils/: CMakeLists.txt  FitPrinter.cxx  RooPow.cxx  RootFileReader.cxx
ANALYSIS/bump_hunt/cpp/: CMakeLists.txt
ANALYSIS/bump_hunt/cpp/include/analysis/: HpsAnalysis.h  TridentAnalysis.h  TridentDataAnalysis.h
ANALYSIS/bump_hunt/cpp/include/utils/: AnalysisUtils.h  EcalUtils.h  FlatTupleMaker.h  TrackClusterMatcher.h
ANALYSIS/bump_hunt/cpp/src/analysis/: CMakeLists.txt  TridentAnalysis.cxx  TridentDataAnalysis.cxx  trident_selector.cxx
ANALYSIS/bump_hunt/cpp/src/utils/: AnalysisUtils.cxx  CMakeLists.txt  EcalUtils.cxx  FlatTupleMaker.cxx  TrackClusterMatcher.cxx
ANALYSIS/bump_hunt/python/: hpspy.py
ANALYSIS/hps-dst/: .gitignore  CMakeLists.txt  README.md
ANALYSIS/hps-dst/doc/: Doxyfile
ANALYSIS/hps-dst/examples/: CMakeLists.txt  analysis_lcio_example.cxx  analysis_pyroot_example.py  analysis_root_example.C
ANALYSIS/hps-dst/include/dst/: DataWriter.h  DstUtils.h  EcalDataWriter.h  EventBuilder.h  GblDataWriter.h  HpsEventBuilder.h  HpsParticleDataWriter.h  MCParticleDataWriter.h  SvtDataWriter.h
ANALYSIS/hps-dst/include/hps_event/: CalorimeterHit.h  EcalCluster.h  EcalHit.h  GblTrack.h  GblTrackData.h  HpsEvent.h  HpsEventLinkDef.h  HpsMCParticle.h  HpsParticle.h  MCParticle.h  SvtHit.h  SvtTrack.h  TriggerData.h
ANALYSIS/hps-dst/include/utils/: EcalUtils.h  HpsGblFitter.h  TrackUtils.h
ANALYSIS/hps-dst/src/dst/: CMakeLists.txt  DstUtils.cxx  EcalDataWriter.cxx  GblDataWriter.cxx  HpsEventBuilder.cxx  HpsParticleDataWriter.cxx  MCParticleDataWriter.cxx  SvtDataWriter.cxx  dst_maker.cxx
ANALYSIS/hps-dst/src/hps_event/: CMakeLists.txt  EcalCluster.cxx  EcalHit.cxx  GblStripData.cxx  GblTrack.cxx  GblTrackData.cxx  HpsEvent.cxx  HpsMCParticle.cxx  HpsParticle.cxx  MuonCluster.cxx  SvtHit.cxx  SvtTrack.cxx  TriggerData.cxx
ANALYSIS/hps-dst/src/utils/: CMakeLists.txt  EcalUtils.cxx  HpsGblFitter.cxx  TrackUtils.cxx  dump_hps_event.cxx
ANALYSIS/tuple/: README.md  applyCut.py  makeTree.py  make_masshist.py  mergeTrees.py
ANALYSIS/tuple/cuts/: README.md  bumphunt_cuts.py  makeTrainingTrees.py  vertex_cuts_data.py
ANALYSIS/users/meeg/: emptyfee_plots.py  fee2016.py  fee_angles.py  moller_angles.py  natalia_hw.py  omar_plots.py  plots_2016.py  pulserplots.py  rate2015.py  rate2016.py  rate_pulser.py  ratio.py  readiness_review.py  tri_plots.py  trident_halo.py  wabrate2015.py  wabratio.py  zvsmass.py
ANALYSIS/vertexing/: GetBeamSizeRuns.py  README.md  apeff.py  fitvtx.py  fitvtx_tuple.py  overlay.py  plotVertexVars.py  run_makecuts.sh  run_radfrac.sh  sumplots.py  vertexCuts.py  vertexCuts2016.py  wabratio_thesisplots.py
ANALYSIS/vertexing/Simps/: AnalyzeSimpCuts.py  SimpReach.py  ap_plots_simps.py  apeff_simps.py  applyCutSimp.py  fittails_mc_simps.py  mergeTreesSimps.py
ANALYSIS/vertexing/acceptance/: ap_plots.py  get_acceptance.py  run.sh
CALIBRATION/COSMIC/: README.md  calibUtilHpsEcal.py  cosmicAnalysis.C  jlab_write.prop  mipSigCut.root  rawFitter.C
CALIBRATION/FEE/: README.md  analyzeFeePeak.C  analyzeMCPeak.C  ecalGains.txt
ONLINE/: README.md
ONLINE/ecalCalib/: calibUtilHpsEcal.py
ONLINE/ecalScalers/: CrateMsgClient.h  README.md  compile.sh  hps_ecal_scalers  hps_ecal_scalers.cxx  hps_ecal_scalers.h  hps_ecal_scalers.py  hps_ecal_scalers_Dict.cxx  hps_ecal_scalers_Dict.h  hps_ecal_scalers_LinkDef.h
ONLINE/monitoringScripts/: L4to6TrackMonitoring-template.settings  LooseTrackAndReconMonitoring-template.settings  SVTRawHitPlots.settings  TrackAndReconMonitoring-template.settings  doMonitoring.py
PRODUCTION/: README.md
PRODUCTION/MC/: README.md  count_filtered_events.py
PRODUCTION/data/: README.md
PRODUCTION/dqm/: DQMcompare.py  README.dm
acceptance/: apeff.py  get_acceptance.py  run.sh  run_apeff.sh
bump-hunter/: README.md
cuts/: base_cuts_data.py  bumphunt_cuts.py  cut_utils.py  makeTrainingTrees.py  moller_cuts.py  tmva.py  vertex_cuts.py  vertex_cuts_data.py  vertex_cuts_truth.py
mgraham_reach/: makeplots.py
src/: Makefile  beam_coords.cc  bunches.cc  explode.cc  lhe_tridents.cc  merge_bunches.cc  merge_files.cc  merge_poisson.cc  print_stdhep.cc  random_sample.cc  rotate.cc  space_events.cc  split.cc  stdhep.cc  stdhep_util.cpp  stdhep_util.hh
src/fit/: CMakeLists.txt
tuple/: applyCut.py
upperlimit/: CERN_Stuff2.f  Makefile  dotrials.py  fitvtx.py  run.sh  toystats.py
(+850 files in other folders)
